# tsumeshogi-solver-wasm

./: Cargo.toml  README.md  build.sh  docs
docs/: 0.bootstrap.js  bootstrap.js  index.html  style.css  worker.js
docs/pkg/: tsumeshogi_solver_wasm.js  tsumeshogi_solver_wasm_bg.wasm
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
