[package]
name = "tsumeshogi-solver-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tsumeshogi-solver = { git = "https://github.com/sugyan/tsumeshogi-solver", tag = "0.5.2" }

[lib]
crate-type = ["cdylib", "rlib"]
